--- a/College Event Frontend/package.json
+++ b/College Event Frontend/package.json
@@ -14,12 +14,20 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.5",
+    "recharts": "^3.3.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "vite": "^7.1.12"
   }
 }
