--- a/College Event Backend/package.json
+++ b/College Event Backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node \"Server Setup/server.js\"",
     "dev": "nodemon \"Server Setup/server.js\"",
+    "build": "echo \"No build needed\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
